doc/ja/Template/V1/index.md
# TemplateV1

## 概要

IBAO(Initial Bulk Auction Offering)テンプレート

## Bulk Auction

主催者によって提供される一定量のトークンを入札者全員で山分け分配するオークション

参加者（入札者）は総入札額に対する個々の入札割合と同じ割合のトークンを得る

全員が同じ価格でトークンを得ることになるため、入札のタイミングによる有利不利はない

割り当て額がいくらになるかは最終の総入札額が決まるまでわからない

入札額が大きいほどトークンの価格が高く（割当量が少なく）なり、小さいほど安く（割当量が多く）なる

## 仕様

### 固定パラメータ

- 最低入札量
  - 0.001ETH
- 総入札限度量
  - 1e27
- 販売トークン限度量
  - 1e50
- 手数料
  - 最終入札量の 1%
- Distributor
  - Distributorのアドレス

### 必要パラメータ

| パラメータ名    | 型      | 概要                               | 条件                   |
| --------------- | ------- | ---------------------------------- | ---------------------- |
| owner           | address | オークションオーナー               | 0 アドレスでないこと   |
| tokenAddr       | address | 販売するトークンのアドレス         | 0 アドレスでないこと   |
| allocatedAmount | uint256 | 販売するトークンの量               | 1 以上 1e50 以下       |
| startingAt      | uint256 | オークション開始時間(timestamp)    | 現在ブロック時間より後 |
| eventDuration   | uint256 | オークション開催期間(seconds)      | 1 日以上 30 日以下     |
| minRaisedAmount | uint256 | （オークション成功判定）最小入札量 | 0 以上 1e27 以下       |

### フロー

#### オークション開催前

オークション主催者がオークションを立ち上げる

#### オークション開催中

オークション参加者が入札する

#### オークション開催後

- オークション成功時
  - オークション主催者が入札トークンを回収する
    - Distributorのオークション主催者に対するリワードスコアを加算する
    - オークション終了後 3 日以内の場合
      - 最小入札額（0.001ETH）に対する割り当て額を計算し、0 の場合待機
  - オークション参加者が販売トークンを請求する
    - オークショントークンの割当てが1最小単位以上の場合
      - Distributorのオークション参加者に対するリワードスコアを加算する
      - 割当て量のトークンを請求する
    - オークショントークンの割当てが０の場合
      - オークション主催者が入札トークン回収前の場合入札額を回収する
- オークション失敗時
  - オークション主催者が販売トークンを回収する
  - オークション参加者が入札トークンを回収する
